// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Main /> container When the app stage is 0 passes the state into the sidebar and progress bar 1`] = `
<div
  className="main-container"
>
  <div
    className="progress-bar"
  >
    <ul
      className="progress-bar-flex-container"
    >
      <li
        className="progress-bar-flex-item active-item"
      >
        User
      </li>
      <li
        className="progress-bar-flex-item"
      >
        Privacy
      </li>
      <li
        className="progress-bar-flex-item"
      >
        Done
      </li>
    </ul>
  </div>
  <div
    className="wrapper"
  >
    <div
      className="sidebar"
    >
      <h3>
        Sign Up Form
      </h3>
      <p>
        Required fiels are marked with an *
      </p>
      <p>
        Passwords must be:
      </p>
      <ul>
        <li>
          At least 10 characters long
        </li>
        <li>
          Contain at least one number
        </li>
        <li>
          Contain at least one upper case letter
        </li>
        <li>
          Contain at least one lower case letter
        </li>
      </ul>
    </div>
    <div
      className="form"
    >
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Name
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="name"
            type="text"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Role
            : 
            
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="role"
            type="text"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Email
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="email"
            type="email"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Password
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            name="password"
            type="password"
          />
        </fieldset>
        <button
          className="right"
          type="submit"
        >
          Next
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<Main /> container When the app stage is 1 should render the correct sidebar and progress bar content 1`] = `
<div
  className="main-container"
>
  <div
    className="progress-bar"
  >
    <ul
      className="progress-bar-flex-container"
    >
      <li
        className="progress-bar-flex-item"
      >
        User
      </li>
      <li
        className="progress-bar-flex-item active-item"
      >
        Privacy
      </li>
      <li
        className="progress-bar-flex-item"
      >
        Done
      </li>
    </ul>
  </div>
  <div
    className="wrapper"
  >
    <div
      className="sidebar"
    >
      <h3>
        Privacy
      </h3>
      <p>
        Please let us know how you would like us to contact you.
      </p>
    </div>
    <div
      className="form"
    >
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Name
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="name"
            type="text"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Role
            : 
            
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="role"
            type="text"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Email
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="email"
            type="email"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Password
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            name="password"
            type="password"
          />
        </fieldset>
        <button
          className="right"
          type="submit"
        >
          Next
        </button>
      </form>
    </div>
  </div>
</div>
`;

exports[`<Main /> container When the app stage is 2 should render the correct sidebar and progress bar content 1`] = `
<div
  className="main-container"
>
  <div
    className="progress-bar"
  >
    <ul
      className="progress-bar-flex-container"
    >
      <li
        className="progress-bar-flex-item"
      >
        User
      </li>
      <li
        className="progress-bar-flex-item"
      >
        Privacy
      </li>
      <li
        className="progress-bar-flex-item active-item"
      >
        Done
      </li>
    </ul>
  </div>
  <div
    className="wrapper"
  >
    <div
      className="sidebar"
    >
      <h3>
        Done!
      </h3>
    </div>
    <div
      className="form"
    >
      <form
        onSubmit={[Function]}
      >
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Name
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="name"
            type="text"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Role
            : 
            
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="role"
            type="text"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Email
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            defaultValue=""
            name="email"
            type="email"
          />
        </fieldset>
        <fieldset
          className="full-width-imput"
        >
          <legend>
            Password
            : 
            *
             
            <span
              className="error"
            />
          </legend>
          <input
            name="password"
            type="password"
          />
        </fieldset>
        <button
          className="right"
          type="submit"
        >
          Next
        </button>
      </form>
    </div>
  </div>
</div>
`;
